tests/NormalTests/paczka1/fuzzy1/42781557.err
Error in line 4: JEzKt S394 46,0
Error in line 9: JEzKt S145 74,1
Error in line 12: JEzKt S394 6,9
Error in line 27: S218 S394 26,2
Error in line 33: S218 S145 29,5
Error in line 6: vtRK5 S890 49,4
Error in line 28: Cj4ePYZ6 S890 66,0
